--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
     "require": {
         "php" : "~5.4|~7.0",
         "yiisoft/yii2": "~2",
-        "mailgun/mailgun-php": "~2.1"
+        "mailgun/mailgun-php": "~2.1",
+        "php-http/curl-client": "~1.6",
+        "guzzlehttp/psr7": "~1.3"
     },
     "require-dev": {
         "phpunit/phpunit" : "~4.0||~5.0",
