--- a/composer.json
+++ b/composer.json
@@ -1,53 +1,58 @@
 {
-    "name": "ninjacto/yii2-mailgun",
-    "description": "Mailgun mailer component for Yii 2 framework.",
-    "type": "yii2-extension",
-    "keywords": [
-        "ninjacto",
-        "yii2-mailgun",
-        "yii2",
-        "extension",
-        "mailer",
-        "mailgun"
-    ],
-    "homepage": "https://github.com/ninjacto/yii2-mailgun",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Ramin Farmani",
-            "email": "ramin.farmani@gmail.com",
-            "homepage": "http://www.ninjacto.com",
-            "role": "Developer"
-        }
-    ],
-    "require": {
-        "php" : "~5.4|~7.0",
-        "yiisoft/yii2": "~2",
-        "mailgun/mailgun-php": "~2.1",
-        "php-http/curl-client": "~1.6",
-        "guzzlehttp/psr7": "~1.3"
-    },
-    "require-dev": {
-        "phpunit/phpunit" : "~4.0||~5.0",
-        "squizlabs/php_codesniffer": "^2.3"
-    },
-    "autoload": {
-        "psr-4": {
-            "ninjacto\\yii2-mailgun\\": "src"
-        }
-    },
-    "minimum-stability": "stable",
-    "scripts": {
-        "test": "phpunit",
-        "check-style": "phpcs -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests",
-        "fix-style": "phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests"
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.0-dev"
-        }
-    },
-    "config": {
-        "sort-packages": true
+  "name": "ninjacto/yii2-mailgun",
+  "description": "Mailgun mailer component for Yii 2 framework.",
+  "type": "yii2-extension",
+  "keywords": [
+    "ninjacto",
+    "yii2-mailgun",
+    "yii2",
+    "extension",
+    "mailer",
+    "mailgun"
+  ],
+  "homepage": "https://github.com/ninjacto/yii2-mailgun",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Ramin Farmani",
+      "email": "ramin.farmani@gmail.com",
+      "homepage": "http://www.ninjacto.com",
+      "role": "Developer"
     }
+  ],
+  "require": {
+    "php": "~5.4|~7.0",
+    "yiisoft/yii2": "~2",
+    "mailgun/mailgun-php": "~2.1",
+    "php-http/curl-client": "~1.6",
+    "guzzlehttp/psr7": "~1.3"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "~4.0||~5.0",
+    "squizlabs/php_codesniffer": "^2.3"
+  },
+  "autoload": {
+    "psr-4": {
+      "ninjacto\\yii2mailgun\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "ninjacto\\yii2mailgun\\tests\\":  "tests/"
+    }
+  },
+  "minimum-stability": "stable",
+  "scripts": {
+    "test": "phpunit",
+    "check-style": "phpcs -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests",
+    "fix-style": "phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests"
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "1.0-dev"
+    }
+  },
+  "config": {
+    "sort-packages": true
+  }
 }
